.k8s/others/postgres-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          resources:
          # requests:
          #   memory: 100M
          #   cpu: 100m
          # limits:
          #   memory: 250M
          #   cpu: 250m
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
