.k8s/others/postgres-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  labels:
    app: postgresql-db
spec:
  ports:
    - port: 5432
  selector:
    app: postgresql-db
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgresql
  labels:
    app: postgresql-db
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgresql-db
    spec:
      containers:
        - image: postgres:9-alpine
          name: postgresql
          ports:
            - containerPort: 5432
              name: postgresql
          volumeMounts:
            - name: postgresql
              mountPath: /var/lib/postgresql
      volumes:
        - name: postgresql
          persistentVolumeClaim:
            claimName: postgres-claim
